--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <!-- My name is Tim Lee -->
     <head>
-        <title>
-            My First Website
-        </title>
-        <style>
-            h1{
-                text-align: center;
-            }
-        </style>
-
+        <meta charset="UTF-8">
+        <title>Sam Bob Website</title>
     </head>
-    <Body style="background-color: aqua;">
-        <h1> Welcome to My Web Page</h1> 
+    <!-- this is the body section -->
+    <body>
+        <h1>My First Website</h1>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, itaque! Dolorem.</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, perspiciatis voluptatum.</p>
+    </body>
+<!-- this is the end of the Body sction -->
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae dolor distinctio minima quos obcaecati et qui laboriosam! Numquam, alias molestias!</p>
-    </Body>
 </html>
